# codeforlife-portal

./: .codeclimate.yml  .codecov.yml  .coverage  .coveragerc  .csslintrc  .devcontainer.json  .eslintrc  .gitattributes  .gitignore  .scss-lint.yml  .travis.yml  BUILD_AND_DEPLOYMENT.md  BUILD_AND_DISTRIBUTION.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  MANIFEST.in  Pipfile  README.md  SUMMARY.md  app-dev.yaml  app-prod.yaml  app-staging.yaml  app.yaml  build.sh  cms-requirements.txt  codeforlife.code-workspace  conftest.py  coverage.xml  create-distribution.sh  create_test_site.py  cypress.config.js  cypress.json  dbfile  deploy.sh  dev.yaml  docker-compose.yml  dos.yaml  install-portal.sh  (+29 more)
.devcontainer/: devcontainer.json
cfl_common/: MANIFEST.in  Pipfile  setup.py
common_utils/: setup.py
deploy/: BUILD_AND_DEPLOYMENT.md  app-dev.yaml  app-prod.yaml  captcha.py  codeforlife-portal-rsa  deploy.sh  install-portal.sh  install-win.bat  mail.py  ocargo-rsa  permissions.py  requirements.txt  settings.py  urls.py  views.py
docker-test/: Dockerfile
docs/: BUILD_AND_DEPLOYMENT.md  Developer_setup_mac  Developer_setup_windows.txt  adding-content-in-wagtail-cms.md  adding_game_end_to_end_tests.txt  creating_an_issue  jump_setup  life-cycle-of-a-code-change.md  online_status_middleware.md  release_process  testing.md
example_project/: portal_test_settings.py  settings.py  test_settings.py  urls.py  wsgi.py
portal/: __init__.py  _version.py  admin.py  aimmo_game.py  app_settings.py  auth_forms.py  autoconfig.py  backends.py  beta.py  captcha.py  core.py  (+20 more)
(+1192 files in other folders)
