# https://github.com/python-semantic-release/python-semantic-release/blob/v7.33.0/docs/configuration.rst#distributions
[tool.semantic_release]
version_variables = ["portal/__init__.py:__version__"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.black]
line-length = 120

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "example_project.portal_test_settings"

[tool.isort]
profile = "black"
