# https://github.com/python-semantic-release/python-semantic-release/blob/v9/docs/configuration.rst
[tool.semantic_release]
version_variables = ["portal/__init__.py:__version__"]
commit_message = "v{version} [skip ci]"

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.black]
line-length = 120

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "example_project.portal_test_settings"

[tool.isort]
profile = "black"
